# firefly-tools

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
integration/: bootstrap.sh  docker-compose.yml  run.sh  test_mcp_tools.py
plugins/firefly-tools/: .env.example  .mcp.json  README.md
plugins/firefly-tools/.claude-plugin/: plugin.json
plugins/firefly-tools/agents/: csv-parser.md  merchant-classifier.md
plugins/firefly-tools/hooks/: check-setup.sh  hooks.json
plugins/firefly-tools/scripts/: budget_forecast.py  categorize.py  detect_duplicates.py  discover_recurring.py  export_transactions.py  firefly_client.py  get_context.py  import_csv.py  manage_metadata.py  manage_rules.py  normalize_merchants.py  review_queue.py  search_transactions.py  spending_report.py  spending_summary.py  update_transactions.py  validate_import.py
plugins/firefly-tools/skills/classify-unknowns/: SKILL.md
plugins/firefly-tools/skills/import-and-review/: SKILL.md
plugins/firefly-tools/skills/monthly-review/: SKILL.md
plugins/firefly-tools/skills/setup/: SKILL.md
plugins/firefly-tools/skills/setup-automation/: SKILL.md
src/firefly_mcp/: models.py  resources.py  server.py
src/firefly_mcp/configs/: hsbc.json  maybank.json
src/firefly_mcp/tools/: import_tool.py  metadata.py  search.py
tests/: test_import_tool.py  test_metadata.py  test_models.py  test_resources.py  test_search.py  test_server.py
